04/02/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Add message about obsoleting b and f commands.
	* README: Reformat and remove b and f commands.

04/01/2005 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update auto tool versions.

04/01/2005 Bob Rossi <bob@brasko.net>
   
   * README: Update autosourcereload option text.
   * Makefile.in: Regenerated with documented autotools version.
   * aclocal.m4: Ditto.
   * configure: Ditto.

03/31/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Mention searching regex bug

03/31/2005 Bob Rossi <bob@brasko.net>

	* configure (VERSION): Update to 0.5.0-cvs
	* configure.in (AM_INIT_AUTOMAKE): Update to 0.5.0-cvs

03/31/2005 Bob Rossi <bob@brasko.net>
	* NEWS: Mention new SIGCHLD code 
	* RELEASE_TODO: Closed the waitpid race condition bug.

03/31/2005 Bob Rossi <bob@brasko.net>
	* RELEASE_TODO: stupid todo things I have in mind before release

03/31/2005 Bob Rossi <bob@brasko.net>
	* NEWS: Change :autosourcereload default to off.
	* README (Colon commands): Ditto.

03/31/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Change :source_reload to :edit
	* README (Colon commands): Change :source_reload to :edit

03/30/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed memory error's found due to valgrind.

03/28/2005 Bob Rossi <bob@brasko.net>

	* NEWS: Fixed a bug in the C/C++ tokenizer to highlight source code.

07/28/2004 Bob Rossi <bob@brasko.net>

    * NEWS: Added 'autosourcereload' option and 'source_reload' colon command.
	* README: Documents autosourcereload and source_reload

version 0.5.0 (07/14/2004):

07/12/2004 Bob Rossi <bob@brasko.net>

    * release-todo.txt: Update instructions

07/12/2004 Bob Rossi <bob@brasko.net>

    * configure.in: Changed version number to 0.5.0 for release

07/12/2004 Bob Rossi <bob@brasko.net>

    * NEWS: Fixed a crash in TGDB (buffering commands). Added libkui to CGDB.

06/14/2004 Bob Rossi <bob@brasko.net>

    * NEWS: A fixed crash when parsing the CLI.

version 0.4.2 (05/10/2004):